[gd_scene load_steps=19 format=3 uid="uid://d23og7kw5eme6"]

[ext_resource type="Script" path="res://Clash/Scripts/Scene-0/control.gd" id="1_yx0jc"]
[ext_resource type="Theme" uid="uid://dkvdqg7gg4au1" path="res://Clash/Themes/head_text.tres" id="2_1anb3"]
[ext_resource type="Theme" uid="uid://cf8whtktkywed" path="res://Clash/Themes/normal_text.tres" id="2_itjvq"]
[ext_resource type="FontFile" uid="uid://c1bh5wpeycudp" path="res://Clash/fonts/Cusong/Chusung-220206.ttf" id="3_28k14"]
[ext_resource type="Theme" uid="uid://pfig5buy8wqv" path="res://Clash/Themes/button.tres" id="4_yvwqi"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pgny2"]
bg_color = Color(0.156863, 0.172549, 0.203922, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sod2x"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wrm1q"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 6
border_width_top = 3
border_width_right = 6
border_width_bottom = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t2b3f"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 6
border_width_top = 3
border_width_right = 6
border_width_bottom = 6

[sub_resource type="InputEventKey" id="InputEventKey_4687j"]
device = -1
keycode = 49
unicode = 49

[sub_resource type="InputEventKey" id="InputEventKey_iw674"]
device = -1
keycode = 4194439
unicode = 49

[sub_resource type="Shortcut" id="Shortcut_ijd5d"]
events = [SubResource("InputEventKey_4687j"), SubResource("InputEventKey_iw674")]

[sub_resource type="InputEventKey" id="InputEventKey_73ej5"]
device = -1
keycode = 50
unicode = 50

[sub_resource type="InputEventKey" id="InputEventKey_nw5d4"]
device = -1
keycode = 4194440
unicode = 50

[sub_resource type="Shortcut" id="Shortcut_51m77"]
events = [SubResource("InputEventKey_73ej5"), SubResource("InputEventKey_nw5d4")]

[sub_resource type="InputEventKey" id="InputEventKey_flmsc"]
device = -1
keycode = 51
unicode = 51

[sub_resource type="InputEventKey" id="InputEventKey_thxl2"]
device = -1
keycode = 4194441
unicode = 51

[sub_resource type="Shortcut" id="Shortcut_t1s3o"]
events = [SubResource("InputEventKey_flmsc"), SubResource("InputEventKey_thxl2")]

[node name="Start_Menu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0
script = ExtResource("1_yx0jc")

[node name="BackGround" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
offset_right = 1152.0
offset_bottom = 648.0
theme_override_styles/panel = SubResource("StyleBoxFlat_pgny2")

[node name="BorderLine" type="Control" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="Label_Up" type="Label" parent="BorderLine"]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 60.0
theme_override_styles/normal = SubResource("StyleBoxFlat_sod2x")

[node name="Label_Middle" type="Label" parent="BorderLine"]
layout_mode = 0
offset_top = 60.0
offset_right = 1152.0
offset_bottom = 582.0
theme_override_styles/normal = SubResource("StyleBoxFlat_wrm1q")

[node name="Label_Down" type="Label" parent="BorderLine"]
layout_mode = 0
offset_top = 582.0
offset_right = 1152.0
offset_bottom = 648.0
theme_override_styles/normal = SubResource("StyleBoxFlat_t2b3f")

[node name="Clash_Title" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.175
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 253.0
offset_top = 0.199997
offset_right = -261.0
offset_bottom = 1.59998
grow_horizontal = 2
theme = ExtResource("2_itjvq")
theme_override_fonts/normal_font = ExtResource("3_28k14")
theme_override_font_sizes/normal_font_size = 21
bbcode_enabled = true
text = "  ,----..     ,--,                                 ,---,     
 /   /   \\  ,--.'|                               ,--.' |     
|   :     : |  | :                               |  |  :     
.   |  ;. / :  : '                    .--.--.    :  :  :     
.   ; /--`  |  ' |       ,--.--.     /  /    '   :  |  |,--. 
;   | ;     '  | |      /       \\   |  :  /`./   |  :  '   | 
|   : |     |  | :     .--.  .-. |  |  :  ;_     |  |   /' : 
.   | '___  '  : |__    \\__\\/: . .   \\  \\    `.  '  :  | | | 
'   ; : .'| |  | '.'|   ,\" .--.; |    `----.   \\ |  |  ' | : 
'   | '/  : ;  :    ;  /  /  ,.  |   /  /`--'  / |  :  :_:,' 
|   :    /  |  ,   /  ;  :   .'   \\ '--'.     /  |  | ,'     
 \\   \\ .'    ---`-'   |  ,     .-./   `--'---'   `--''       
  `---`                `--`---'                           "
fit_content = true
autowrap_mode = 0

[node name="Head_Hint" type="RichTextLabel" parent="."]
layout_mode = 2
anchor_left = 0.5
anchor_right = 0.5
offset_left = -192.0
offset_top = 432.0
offset_right = 192.0
offset_bottom = 536.0
theme = ExtResource("2_1anb3")
theme_override_font_sizes/normal_font_size = 37
bbcode_enabled = true
text = "[center]输入数字[/center]
[center]决定你要做什么[/center]"
fit_content = true
threaded = true

[node name="MarginContainer" type="MarginContainer" parent="."]
z_index = 100
layout_mode = 0
offset_top = 582.0
offset_right = 1152.0
offset_bottom = 648.0
theme_override_constants/margin_right = 28
theme_override_constants/margin_bottom = 1

[node name="FunctionBar" type="HBoxContainer" parent="MarginContainer"]
z_index = 1
layout_mode = 2
theme_override_constants/separation = 35
alignment = 2

[node name="Button_Wakeup" type="Button" parent="MarginContainer/FunctionBar"]
layout_mode = 2
tooltip_text = "开始一个新的游戏"
theme = ExtResource("4_yvwqi")
action_mode = 0
shortcut = SubResource("Shortcut_ijd5d")
shortcut_in_tooltip = false
text = "1) 醒来"
flat = true

[node name="Button_Continue" type="Button" parent="MarginContainer/FunctionBar"]
layout_mode = 2
theme = ExtResource("4_yvwqi")
shortcut = SubResource("Shortcut_51m77")
shortcut_in_tooltip = false
text = "2) 返回监狱"
flat = true

[node name="Button_Exit" type="Button" parent="MarginContainer/FunctionBar"]
layout_mode = 2
theme = ExtResource("4_yvwqi")
shortcut = SubResource("Shortcut_t1s3o")
shortcut_in_tooltip = false
text = "3) 退出"
flat = true

[connection signal="pressed" from="MarginContainer/FunctionBar/Button_Wakeup" to="." method="_on_button_wakeup_pressed"]
[connection signal="pressed" from="MarginContainer/FunctionBar/Button_Continue" to="." method="_on_button_continue_pressed"]
[connection signal="pressed" from="MarginContainer/FunctionBar/Button_Exit" to="." method="_on_button_exit_pressed"]
